# ballerina-library

./: .gitignore  CONTRIBUTING.md  README.md  SOLUTION_SUMMARY.md  test_merge_standalone.py  test_merge_v2.py
.github/: CODEOWNERS  pull_request_template.md
agent-skills/: README.md
connector-doc-generator/: Ballerina.toml  Config.toml.example  Dependencies.toml  README.md  config.bal  main.bal
connector_automator/: .devcontainer.json  .gitignore  Ballerina.toml  Dependencies.toml  README.md  main.bal
dashboard/: Ballerina.toml  Dependencies.toml  constants.bal  diGrapg.bal  di_graph.bal  github.bal  gitihub.bal  graph.bal  main.bal  remote.bal  types.bal  utils.bal
dependabot/: file_update.py  update_lang_version.py  update_repositories.py  update_version_data.py  version_update.py
docs/: adding-a-new-ballerina-module.md  api-documentation-guide.md  build-and-release-guide.md  connector-development-process.md  graalvm-compatibility-in-ballerina-libraries.md  hacktoberfest-2025-graphql-ux-improvement.md  library-development-process.md  load-test-guide.md  module-owners.md  sprint-master-responsibilities.md  zero-bug-policy.md
example-doc-generator/: .env.example  .gitignore  .mcp.json  Ballerina.toml  Config.toml.example  Makefile  README.md  batch_items.json.example  config.bal  main.bal
example-doc-generator/python/: agent_server.py  batch_commit_docs.py  batch_commit_sample.py  batch_pr_docs.py  batch_pr_samples.py  crop_screenshots.py  pr_preview.py  publish_all.py  publish_docs.py  publish_helpers.py  publish_sample.py  pyproject.toml  requirements.txt
(+414 files in other folders)
